@@ -5,7 +5,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
 import java.net.InetAddress;
-import java.net.URL;
+import java.net.URI;
 import java.util.ArrayList;
 import java.util.Base64;
 import java.util.Collections;
@@ -160,7 +160,8 @@ public class IoWagoImpl extends AbstractOpenemsModbusComponent
 
 	private static Document downloadConfigXml(InetAddress ip, String filename, String username, String password)
 			throws ParserConfigurationException, SAXException, IOException {
-		var url = new URL(String.format("http://%s/etc/%s", ip.getHostAddress(), filename));
+		var uri = URI.create(String.format("http://%s/etc/%s", ip.getHostAddress(), filename));
+		var url = uri.toURL();
 		var authStr = String.format("%s:%s", username, password);
 		var bytesEncoded = Base64.getEncoder().encode(authStr.getBytes());
 		var authEncoded = new String(bytesEncoded);
